--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
+    <div class="section1">
+        <h1>MAUREEN MWANGI</h1>
+        <p>HI,<br>I'M MAUREEN MWANGI</p>
+    </div>
     
 </body>
 </html>
