--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <div class="section1">
         <h1>MAUREEN MWANGI</h1>
-        <p>HI,<br>I'M MAUREEN MWANGI <span class="web">WEB DEVELOPER </span>
+        <p>
+            HI,<br>I'M MAUREEN MWANGI <span class="web">WEB DEVELOPER </span>
         </p>
+        <div class="image1">
+         <img src="/images/image1.png" alt="black and white image">
+        </div>
     </div>
     
 </body>
