add a background color

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="section1">
-        <h1>MAUREEN MWANGI</h1>
+        <div class="first">
         <p>
-            HI,<br>I'M MAUREEN MWANGI <span class="web">WEB DEVELOPER </span>
+            HI,<br>I'M MAUREEN MWANGI <br><span class="web">WEB DEVELOPER </span>
         </p>
+        </div>
         <div class="image1">
          <img src="/images/image1.png" alt="black and white image">
         </div>
