--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">MAUREEN MWANGI</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">PROJECTS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT ME</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="section1">
         <div class="first">
         <p>
@@ -17,6 +41,9 @@
         <div class="image1">
          <img src="/images/image1.png" alt="black and white image">
         </div>
+    </div>
+    <div class="section2">
+
     </div>
     
 </body>
