add a list of items to section 3

--- a/index.html
+++ b/index.html
@@ -56,13 +56,22 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">MY HOBBIES</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">
+                    
+                </p>
               </div>
             </div>
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">CAREER GOALS</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">My career goals include:
+                    <ul>
+                        <li>Become an expert in web developer.</li>
+                        <li>Gain new skills in web development.</li>
+                        <li>Make a career switch to Tech.</li>
+                        <li>Boost my networking abilities</li>
+                    </ul>
+                </p>
               </div>
             </div>
           </div>
