Add a list of item to section 3 card 2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
               <div class="card-body">
                 <h5 class="card-title">MY HOBBIES</h5>
                 <p class="card-text">
-                    
+                    <ul>
+                        <li>I love swimming.</li>
+                        <li>I love cooking.</li>
+                        <li>I love reading.</li>
+
+                    </ul>
                 </p>
               </div>
             </div>
