Add style to card1 and card3

--- a/index.html
+++ b/index.html
@@ -47,16 +47,23 @@
     <div class="section2">
         <h1>ABOUT ME</h1>
         <div class="card-group">
-            <div class="card">
+            <div class="card1">
               <div class="card-body">
                 <h5 class="card-title">MY SKILLS</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"> My skills include:
+                    <ul>
+                        <li>Open mindedness</li>
+                        <li>Creative</li>
+                        <li>Emotional intelligence</li>
+
+                    </ul>
+                </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card2">
               <div class="card-body">
                 <h5 class="card-title">MY HOBBIES</h5>
-                <p class="card-text">
+                <p class="card-text"> My hobbies include:
                     <ul>
                         <li>I love swimming.</li>
                         <li>I love cooking.</li>
@@ -66,7 +73,7 @@
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card3">
               <div class="card-body">
                 <h5 class="card-title">CAREER GOALS</h5>
                 <p class="card-text">My career goals include:
