removed section 1 cards and added the cards in columns

--- a/index.html
+++ b/index.html
@@ -46,10 +46,41 @@
     </div>
     <div class="section2">
         <h1>ABOUT ME</h1>
-        <div class="card-group">
-            <div class="card1">
-              <div class="card-body">
-                <h5 class="card-title">MY SKILLS</h5>
+        <div class="row row-cols-1 row-cols-md-5 g-4">
+            <div class="col1">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">CAREER GOALS</h5>
+                  <p class="card-text">My career goals include:
+                      <ul>
+                          <li>Become an expert in web developer.</li>
+                          <li>Gain new skills in web development.</li>
+                          <li>Make a career switch to Tech.</li>
+                          <li>Boost my networking abilities</li>
+                      </ul>
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="col2">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">MY HOBBIES</h5>
+                <p class="card-text"> My hobbies include:
+                    <ul>
+                        <li>I love swimming.</li>
+                        <li>I love cooking.</li>
+                        <li>I love reading.</li>
+
+                    </ul>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col3">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">MY SKILLS</h5>
                 <p class="card-text"> My skills include:
                     <ul>
                         <li>Open mindedness</li>
@@ -58,37 +89,23 @@
 
                     </ul>
                 </p>
-              </div>
-            </div>
-            <div class="card2">
-              <div class="card-body">
-                <h5 class="card-title">MY HOBBIES</h5>
-                <p class="card-text"> My hobbies include:
-                    <ul>
-                        <li>I love swimming.</li>
-                        <li>I love cooking.</li>
-                        <li>I love reading.</li>
-
-                    </ul>
-                </p>
-              </div>
-            </div>
-            <div class="card3">
-              <div class="card-body">
-                <h5 class="card-title">CAREER GOALS</h5>
-                <p class="card-text">My career goals include:
-                    <ul>
-                        <li>Become an expert in web developer.</li>
-                        <li>Gain new skills in web development.</li>
-                        <li>Make a career switch to Tech.</li>
-                        <li>Boost my networking abilities</li>
-                    </ul>
-                </p>
+                </div>
               </div>
             </div>
           </div>
 
+
+
+
+    <div class="section3">
+        <h1>PROJECTS</h1>
+
+
+
+
     </div>
+  
+    
     
 </body>
 </html>
