Add a new card 4

--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                 </div>
               </div>
             </div>
+            <div class="col4">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">MY EDUCATION</h5>
+                <p class="card-text"> My level of education is as follows:
+                    <ul>
+                        <li>Undergraduate Degree (BSc Soil Science with IT), Maseno University, 2020,</li>
+                      </ul>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="program"></div>
+            <p>I decided to join Moringa school due to my passion in Tech. Learning software development will change my career path and Ican secure a well paying job.</p>
           </div>
 
 
