add a paragraph in the aboutsection

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </div>
     <div class="section2">
         <h1>ABOUT ME</h1>
+        <p class="about"> I decided to join Moringa school due to my passion in Tech. Learning software development will change my career path and Ican secure a well paying job.
+        </p>
         <div class="row row-cols-1 row-cols-md-5 g-4">
             <div class="col1">
               <div class="card h-100">
@@ -104,9 +106,9 @@
                 </div>
               </div>
             </div>
-            <div class="program"></div>
-            <p>I decided to join Moringa school due to my passion in Tech. Learning software development will change my career path and Ican secure a well paying job.</p>
-          </div>
+            <div class="program">
+            </div> 
+        </div>
 
 
 
