add images to projects section

--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@
                 </div>
               </div>
             </div>
-            <div class="program">
-            </div> 
         </div>
 
 
@@ -115,6 +113,22 @@
 
     <div class="section3">
         <h1>PROJECTS</h1>
+        <div class="projects">
+          <div class="project1">
+            <img src="./images/burger.jpg" alt="" class="right">
+          </div>
+          <div class="project2">
+            <img src="/images/hero-cover.3.png" alt="" class="right">
+          </div>
+          <div class="project3">
+            <img src="/images/jsimage.png" alt="" class="right">
+          </div>
+          <div class="project4">
+            <img src="/images/logo.png" alt="" class="right">
+          project here's a link to the project <a href=""></a>
+          </div>
+
+        </div>
 
 
 
