add the hyperlinks

--- a/index.html
+++ b/index.html
@@ -116,16 +116,19 @@
         <div class="projects">
           <div class="project1">
             <img src="./images/burger.jpg" alt="" class="right">
+            Here's a link to this project <a href="https://github.com/maureen-james/moh.git"></a>
           </div>
           <div class="project2">
             <img src="/images/hero-cover.3.png" alt="" class="right">
+            Here's a link to this project <a href="https://github.com/maureen-james/insuranceweb.git"></a>
           </div>
           <div class="project3">
             <img src="/images/jsimage.png" alt="" class="right">
+          Here's a link to this project <a href="https://github.com/maureen-james/quizboard.git"></a>
           </div>
           <div class="project4">
             <img src="/images/logo.png" alt="" class="right">
-          project here's a link to the project <a href=""></a>
+          Here's a link to this project <a href="https://github.com/maureen-james/THE-SMART-FARM.git"></a>
           </div>
 
         </div>
