Add contact me in section 4

--- a/index.html
+++ b/index.html
@@ -116,25 +116,31 @@
         <div class="projects">
           <div class="project1">
             <img src="./images/burger.jpg" alt="" class="right">
-            Here's a link to this project <a href="https://github.com/maureen-james/moh.git"></a>
+            Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a>
           </div>
           <div class="project2">
             <img src="/images/hero-cover.3.png" alt="" class="right">
-            Here's a link to this project <a href="https://github.com/maureen-james/insuranceweb.git"></a>
+            Here's a link to this project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
           </div>
           <div class="project3">
             <img src="/images/jsimage.png" alt="" class="right">
-          Here's a link to this project <a href="https://github.com/maureen-james/quizboard.git"></a>
+          Here's a link to this project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
           </div>
           <div class="project4">
             <img src="/images/logo.png" alt="" class="right">
-          Here's a link to this project <a href="https://github.com/maureen-james/THE-SMART-FARM.git"></a>
+          Here's a link to this project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
           </div>
 
         </div>
-
-
-
+    </div>
+    <div class="section4">
+    <h1>CONTACT ME</h1>
+    <p class="contacts">
+      Get in Touch with me
+    </p>
+    <div class="linked">
+      
+    </div>
 
     </div>
   
