add background color to the projects section

--- a/index.html
+++ b/index.html
@@ -18,35 +18,40 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link" href="#section1">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="#section2">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PROJECTS</a>
+                <a class="nav-link" href="#section3">PROJECTS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT ME</a>
+                <a class="nav-link" href="#section4">CONTACT ME</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    <div class="section1">
+    <div id="section1">
+      <div class="devimage">
         <div class="first">
-        <p>
+        <p class="p1">
             HI,<br>I'M MAUREEN MWANGI <br><span class="web">WEB DEVELOPER </span>
         </p>
         </div>
         <div class="image1">
          <img src="/images/image1.png" alt="black and white image">
         </div>
+      </div>
     </div>
-    <div class="section2">
+    <div id="section2">
+      <div class="aboutme">
         <h1>ABOUT ME</h1>
-        <p class="about"> I decided to join Moringa school due to my passion in Tech. Learning software development will change my career path and Ican secure a well paying job.
+        <p class="about"> I decided to join Moringa school due to my passion in Tech. <br> Learning software development will change my career path and Ican secure a well paying job.
+          My goal is to be a web developer and change my career path. To achieve this, I have to learn different programming languages  and frameworks. <br> At Moringa School, I will also learn more about Django and Angular. I will also learn project management and implementing my own projects and also holding myself accountable . I'll also partner with other software developers teams learn from them and improve my soft skills.
         </p>
+      </div>
         <div class="row row-cols-1 row-cols-md-5 g-4">
             <div class="col1">
               <div class="card h-100">
@@ -110,43 +115,58 @@
 
 
 
-    <div class="section3">
+    <div id="section3">
         <h1>PROJECTS</h1>
         <div class="projects">
           <div class="project1">
             <img src="./images/burger.jpg" alt="" class="right">
-            Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a>
+            <p>
+           Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a> 
+          </p>
           </div>
           <div class="project2">
             <img src="/images/hero-cover.3.png" alt="" class="right">
-            Here's a link to this project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
+            <p>
+          Here's a link to the project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
+          </p>
           </div>
           <div class="project3">
             <img src="/images/jsimage.png" alt="" class="right">
-          Here's a link to this project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
+            <p>
+          Here's a link to the project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
+        </p>
           </div>
           <div class="project4">
             <img src="/images/logo.png" alt="" class="right">
-          Here's a link to this project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
+          <p>
+          Here's a link to the project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
+        </p>
           </div>
 
         </div>
     </div>
-    <div class="section4">
+    <div id="section4">
     <h1>CONTACT ME</h1>
+    <div class="me">                 
     <p class="contacts">
       Get in Touch with me
     </p>
     <div class="linked">
+      linked in for employers
       <img src="/images/linkedin.png" alt="" class="left">
+      <a href="https://www.linkedin.com/in/maureen-mwangi-262186213">Maureen Mwangi</a>
     </div>
     <div class="facebook">
-      <img src="/images/facebook.jpeg" alt="">
+      facebook for developers 
+      <img src="/images/facebook.jpeg" alt="" class="left">
+      <a href="https://www.facebook.com/maureen.nyambura.3576">Maureen James</a>
     </div>
     <div class="twitter">
-      <img src="/images/twitter.png" alt="">
+      twitter for developers
+      <img src="/images/twitter.png" alt="" class="left">
+      <a href="https://twitter.com/maureen_mwas"> @maureen_mwas</a>
     </div>
-
+  </div> 
     </div>
   
     
