modified the styling of image 1

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div id="section2">
       <div class="aboutme">
         <h1>ABOUT ME</h1>
-        <p class="about"> I decided to join Moringa school due to my passion in Tech. <br> Learning software development will change my career path and Ican secure a well paying job.
-          My goal is to be a web developer and change my career path. To achieve this, I have to learn different programming languages  and frameworks. <br> At Moringa School, I will also learn more about Django and Angular. I will also learn project management and implementing my own projects and also holding myself accountable . I'll also partner with other software developers teams learn from them and improve my soft skills.
+        <p class="about"> I decided to join Moringa school due to my passion in Tech. <br> Learning software development will change my career path and I can secure a well paying job.
+          My goal is to be a web developer. To achieve this, I have to learn different programming languages  and frameworks. <br> At Moringa School, I will also learn more about Django and Angular. I will also learn project management and implementing my own projects and also holding myself accountable . I'll also partner with other software developers teams learn from them and improve my soft skills.
         </p>
       </div>
         <div class="row row-cols-1 row-cols-md-5 g-4">
@@ -121,25 +121,26 @@
           <div class="project1">
             <img src="./images/burger.jpg" alt="" class="right">
             <p>
-           Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a> 
+              This is an E-commerce website describing a burger palace, different types of burgers with their prices. Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a> 
           </p>
           </div>
           <div class="project2">
             <img src="/images/hero-cover.3.png" alt="" class="right">
             <p>
-          Here's a link to the project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
+              This is a website that shows a landing page of an insurance website. <br> It contains description of services offered, prices and how to get in contact with them. Here's a link to the project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
           </p>
           </div>
           <div class="project3">
             <img src="/images/jsimage.png" alt="" class="right">
             <p>
-          Here's a link to the project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
+              This is a website that shows a quiz form.It contains some sample questions. The languages uses include HTML, CSS and Javascript. Here's a link to the project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
         </p>
           </div>
           <div class="project4">
             <img src="/images/logo.png" alt="" class="right">
           <p>
-          Here's a link to the project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
+
+         This is a website that enables farmers and potential growers to access farm inputs and socialize with other agriculture practitioners. Here's a link to the project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
         </p>
           </div>
 
