modified styling of list items

--- a/index.html
+++ b/index.html
@@ -121,26 +121,49 @@
           <div class="project1">
             <img src="./images/burger.jpg" alt="" class="right">
             <p>
-              This is an E-commerce website describing a burger palace, different types of burgers with their prices. Here's a link to this project <a href="https://maureenmwangi.github.io/moh/">Burger palace</a> 
+              This is an E-commerce website describing a burger palace, different types of burgers with their prices. <br>  The languages used include:
+              <ol>
+                <li> HTML</li>
+                <li> CSS</li>
+              </ol>
+              Here's a link to this project <a href="https://maureenmwangi.github.io/moh/"><strong>Burger palace</strong></a> 
           </p>
           </div>
           <div class="project2">
             <img src="/images/hero-cover.3.png" alt="" class="right">
             <p>
-              This is a website that shows a landing page of an insurance website. <br> It contains description of services offered, prices and how to get in contact with them. Here's a link to the project <a href="https://maureenmwangi.github.io/insuranceweb/">Insurance Web</a>
+              This is a website that shows a landing page of an insurance website. <br> It contains description of services offered, prices and how to get in contact with them. <br> The languages used include:
+              <ol>
+                <li> HTML</li>
+                <li> CSS</li>
+              </ol> 
+              Here's a link to the project <a href="https://maureenmwangi.github.io/insuranceweb/"> <strong>Insurance Web</strong> </a>
           </p>
           </div>
           <div class="project3">
             <img src="/images/jsimage.png" alt="" class="right">
             <p>
-              This is a website that shows a quiz form.It contains some sample questions. The languages uses include HTML, CSS and Javascript. Here's a link to the project <a href="https://maureenmwangi.github.io/quizboard/">Quizboard</a>
+              This is a website that shows a quiz form.It contains some sample questions. <br> 
+              The languages uses include:
+              <ol>
+                <li> HTML</li>
+                <li> CSS</li>
+                <li> Javascript</li>
+              </ol>
+          Here's a link to the project <a href="https://maureenmwangi.github.io/quizboard/"><strong>Quizboard</strong></a>
         </p>
           </div>
           <div class="project4">
             <img src="/images/logo.png" alt="" class="right">
           <p>
 
-         This is a website that enables farmers and potential growers to access farm inputs and socialize with other agriculture practitioners. Here's a link to the project <a href="https://jaredkevin.github.io/THE-SMART-FARM/">Smart-Farm</a>
+         This is a website that enables farmers and potential growers to access farm inputs and socialize with other agriculture practitioners. <br> The languages used include: 
+         <ol>
+          <li> HTML</li>
+          <li> CSS</li>
+          <li> Javascript</li>
+        </ol>
+        Here's a link to the project <a href="https://jaredkevin.github.io/THE-SMART-FARM/"><strong>Smart-Farm</strong></a>
         </p>
           </div>
 
