--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <h1>CONTACT ME</h1>
     <div class="me">                 
     <p class="contacts">
-      Get in Touch with me
+     <strong> Get in Touch with me</strong>
     </p>
     <div class="linked">
       linked in for employers
@@ -192,8 +192,17 @@
     </div>
   </div> 
     </div>
+    <div class="footer">
+      <div class="card text-center">
+        <div class="card-header">
+      COPYRIGHTS 2022
+        </div>
+    </div>
+
   
-    
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> 
     
 </body>
 </html>
