add the right source path for the images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </p>
         </div>
         <div class="image1">
-         <img src="/images/image1.png" alt="black and white image">
+         <img src="./images/image1.png" alt="black and white image">
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
           </p>
           </div>
           <div class="project2">
-            <img src="/images/hero-cover.3.png" alt="" class="right">
+            <img src="./images/hero-cover.3.png" alt="" class="right">
             <p>
               This is a website that shows a landing page of an insurance website. <br> It contains description of services offered, prices and how to get in contact with them. <br> The languages used include:
               <ol>
@@ -141,7 +141,7 @@
           </p>
           </div>
           <div class="project3">
-            <img src="/images/jsimage.png" alt="" class="right">
+            <img src="./images/jsimage.png" alt="" class="right">
             <p>
               This is a website that shows a quiz form.It contains some sample questions. <br> 
               The languages uses include:
@@ -154,7 +154,7 @@
         </p>
           </div>
           <div class="project4">
-            <img src="/images/logo.png" alt="" class="right">
+            <img src="./images/logo.png" alt="" class="right">
           <p>
 
          This is a website that enables farmers and potential growers to access farm inputs and socialize with other agriculture practitioners. <br> The languages used include: 
@@ -177,17 +177,17 @@
     </p>
     <div class="linked">
       linked in for employers
-      <img src="/images/linkedin.png" alt="" class="left">
+      <img src="./images/linkedin.png" alt="" class="left">
       <a href="https://www.linkedin.com/in/maureen-mwangi-262186213">Maureen Mwangi</a>
     </div>
     <div class="facebook">
       facebook for developers 
-      <img src="/images/facebook.jpeg" alt="" class="left">
+      <img src="./images/facebook.jpeg" alt="" class="left">
       <a href="https://www.facebook.com/maureen.nyambura.3576">Maureen James</a>
     </div>
     <div class="twitter">
       twitter for developers
-      <img src="/images/twitter.png" alt="" class="left">
+      <img src="./images/twitter.png" alt="" class="left">
       <a href="https://twitter.com/maureen_mwas"> @maureen_mwas</a>
     </div>
   </div> 
